# rust-genetic-algorithm

./: Cargo.toml  README.md
src/: algorithm.rs  individual.rs  main.rs  parameter.rs  problem.rs
