[package]
name = "rust-ga"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.1", features = ["derive", "string"] }
iter_num_tools = "0.7.1"
rand = "0.8.5"
rayon = "1.8.1"
time = "0.3.34"
